# JogoSimao

./: .gitignore  CMakeLists.txt  DiagramaJogo.uml  GameDiagram.uml  Makefile  README.md  desktop.ini
include/: Game.hpp  IDs.hpp  Unique.hpp  graphics.h
include/Entities/: Being.hpp  Entity.hpp  Projectile.hpp  StaticEntity.hpp
include/Entities/Characters/: Character.hpp  Dragon.hpp  Enemy.hpp  Player.hpp
include/Entities/Obstacles/: Obstacle.hpp  Platform.hpp
include/Lists/: Element.hpp  EntityList.hpp  ListTL.hpp
include/Managers/: AnimationManager.hpp  CollisionManager.hpp  EventsManager.hpp  Graphics.hpp  GraphicsManager.hpp  SingleFrameAnimation.hpp
include/Math/: CoordsTL.hpp
include/Observer/: Observer.hpp
src/: Game.cpp  Unique.cpp  graphics.cpp  main.cpp
src/Entities/: Being.cpp  Entity.cpp  StaticEntity.cpp
src/Entities/Characters/: Character.cpp  Player.cpp
src/Entities/Obstacle/: Obstacle.cpp  Platform.cpp
src/Lists/: EntityList.cpp
src/Managers/: Animation.cpp  AnimationManager.cpp  CollisionManager.cpp  EventsManager.cpp  Graphics.cpp  GraphicsManager.cpp  SingleFrameAnimation.cpp
